--- a/exercise04/Makefile
+++ b/exercise04/Makefile
@@ -24,9 +24,9 @@ export MDV_XLM_HOME        := $(shell dirname $(shell dirname $(dir $(XCELIUM_BI
 # ==== Design Files ====
 # --- Design Setup and Simulation related ---
 # List source files here (not the testbench!).
-HDL_SRC             := ./rriscv_pkg.sv ./register_file.sv ./alu.sv ./instruction_decoder.sv ./cpu.sv
+HDL_SRC             := ./rriscv_pkg.svh ./register_file.sv ./alu.sv ./instruction_decoder.sv ./cpu.sv
 # Put testbench file here!
-HDL_TB_SRC          := ./rriscv_pkg.sv ./mem.sv ./instr_mem.sv ./tb_cpu.sv
+HDL_TB_SRC          := ./rriscv_pkg.svh ./mem.sv ./instr_mem.sv ./tb_cpu.sv
 # Top module name for Simulation. If a testbench exits this should be the name of the testbench module.
 HDL_TB_TOP          := tb_cpu
 
